Style Fix: Adjust motor settings layout and improve spacing

--- a/src/css/tabs/motors.less
+++ b/src/css/tabs/motors.less
@@ -4,6 +4,11 @@
         flex-direction: column;
         gap: 1rem;
     }
+    .motorstop {
+        .spacer_box {
+            gap: 0;
+        }
+    }
     .configuration {
         display: flex;
         flex-direction: column;
@@ -44,6 +49,18 @@
             line-height: 18px;
         }
     }
+    table.featuresMultiple {
+        border-collapse: collapse;
+        tbody {
+            border-bottom: 1px solid var(--surface-500);
+
+            tr {
+                td {
+                    padding: 0.5rem 0;
+                }
+            }
+        }
+    }
     .number {
         input {
             width: 55px;
@@ -70,15 +87,19 @@
         span {
             margin-left: 0;
         }
-        margin-bottom: 5px;
-        clear: left;
-        padding-bottom: 5px;
+        margin-bottom: 0px;
+        padding: 0.5rem 0;
         border-bottom: 1px solid var(--surface-500);
         width: 100%;
         &:last-child {
             border-bottom: none;
             padding-bottom: 0;
             margin-bottom: 0;
+        }
+        .helpicon {
+            margin-right: 7px !important;
+            margin-left: auto !important;
+            float: none;
         }
     }
     .disarm {
@@ -127,9 +148,7 @@
         }
     }
     .selectProtocol {
-        margin-bottom: 5px;
-        clear: left;
-        padding-bottom: 5px;
+        padding: 0.5rem 0;
         border-bottom: 1px solid var(--surface-500);
         width: 100%;
     }
@@ -146,16 +165,6 @@
     }
     .modelAndGraph {
         width: 100%;
-    }
-    .btn {
-        .disabled {
-            cursor: default;
-            color: #fff;
-            background-color: #afafaf;
-            border: none;
-            pointer-events: none;
-            opacity: 0.5;
-        }
     }
     #dialogMotorOutputReorder-closebtn {
         margin-right: 0px;
